# msst-net-client-installer

./: Cargo.toml
.github/workflows/: release.yml
docker/: docker-compose.yml
docs/superpowers/plans/: 2026-06-29-tui-beautification.md
docs/superpowers/specs/: 2026-06-29-tui-beautification-design.md
src/: detect.rs  docker.rs  github.rs  install.rs  main.rs  ui.rs
